# adata_hf_datasets

./: .cruft.json  .gitignore  .gitmodules  README.md  cellwhisperer_geneformer.txt  cw-geneformer.txt  cw_gf.txt  pyproject.toml  test.h5ad
.github/ISSUE_TEMPLATE/: feature_request.yml
.github/workflows/: build.yaml  release.yaml  test.yaml
conf/: HIHA_100k.yaml  create_dataset.yaml  cxg_full.yaml  cxg_tiny.yaml  cxg_tiny_2.yaml  dataset_bowel_disease.yaml  dataset_cellxgene_pseudo_bulk_100k.yaml  dataset_cellxgene_pseudo_bulk_10k.yaml  dataset_cellxgene_pseudo_bulk_200k.yaml  dataset_cellxgene_pseudo_bulk_350k.yaml  dataset_cellxgene_pseudo_bulk_35k.yaml  dataset_cellxgene_pseudo_bulk_3_5k.yaml  dataset_config_example.yaml  dataset_default.yaml  dataset_default_old.yaml  dataset_default_test.yaml  dataset_default_train.yaml  dataset_example.yaml  dataset_example_short.yaml  dataset_geo_700k.yaml  dataset_geo_70k.yaml  dataset_geo_7k.yaml  dataset_human_disease.yaml  dataset_human_immune_health_atlas.yaml  dataset_human_immune_health_atlas_500k.yaml  dataset_human_immune_health_atlas_normlog.yaml  dataset_human_pancreas.yaml  dataset_tabula_sapiens_100k.yaml  dataset_tabula_sapiens_10k.yaml  dataset_tabula_sapiens_50k.yaml  dataset_tabula_sapiens_5k.yaml  dataset_tabula_sapiens_bone_marrow.yaml  dataset_tabula_sapiens_bone_marrow_10k.yaml  dataset_tabula_sapiens_human_disease.yaml  dataset_tabula_sapiens_v2.yaml  dataset_tabula_sapiens_v2_large_int.yaml  dataset_tabula_sapiens_v2_small_int.yaml  dataset_test_workflow.yaml  embed_adata.yaml  geo_350k.yaml  (+15 more)
docs/: conf.py  contributing.md
notebooks/: check_gene_selection.ipynb  create_and_publish_dataset.ipynb  create_and_publish_train_dataset.ipynb  create_initial_embeddings.ipynb  download_from_link.ipynb  get_cell_type_list.ipynb  get_data_with_info.ipynb  load_adata_from_census.ipynb  load_data_from_nextcloud.ipynb  poster_figs.ipynb  preprocessing.ipynb  scib_data.ipynb  scvi_foundation.ipynb  subset_adata.ipynb  test_cw_gf.ipynb  upload_to_nextcloud.ipynb
resources/: cell_types.txt  cellxgene_geo_pca_10000_to_50.pkl  cellxgene_geo_pca_3936_to_50.pkl  cellxgene_geo_pca_8000_to_50.pkl  diseases.txt  gene_selection_ENSG_8k.txt  genes.txt  vocab.json
scripts/: concat_adata_by_split.py  create_dataset.py  create_dataset_old.py  create_datasets.py  embed_adata.py  embed_chunks.slurm  embed_chunks_parallel.slurm  fetch_cell_types.py  fetch_diseases.py  fetch_genes.py  fetch_term_descriptions.py  job.slurm  preprocess.py  preprocess_adata.py  run_concat_adata_by_split.slurm  run_create_ds.slurm  run_embed_adata.slurm  run_embed_adata_cpu.slurm  run_embed_parallel.sh  run_embed_parallel_cpu.bash  run_fetch_term_descriptions.slurm  run_preprocess.slurm  run_preprocess_test.slurm  run_preprocess_train.slurm  run_split_adata.slurm  split_adata.py  test_datasets.slurm  test_datasets_create.py  train_datasets.slurm  train_datasets_create.py  verify_datasets.py  verify_datasets_old.py
scripts/dataset_creation/: README.md  create_dataset.py  run_create_ds.slurm
scripts/download/: README.md  download_dataset.py  download_dataset_config.py  download_test.py  run_download_ds.slurm  submit_download.sh  submit_download_job.sh
scripts/embed/: README.md  README_new.md  embed_adata.py  embed_array.slurm  embed_chunks_parallel.slurm  embed_configure_submit_parallel_sh.py  embed_core.py  embed_launcher.py  embed_submit_parallel.sh  embedding_methods_new.py  prepare_embed_adata.py  prepare_embed_chunks_parallel.slurm  run_embed.slurm  run_embed_new.slurm  run_embed_parallel.sh  run_embed_parallel.slurm  run_embed_prepare.slurm  run_embed_with_config.py  test_waiting_logic.py
scripts/gene_selection/: get_genes.py
scripts/old/: concat_adata_by_split.py  create_dataset_old.py  run_concat_adata_by_split.slurm
scripts/preprocessing/: README.md  preprocess.py  run_preprocess.slurm  run_preprocess_test.slurm  run_preprocess_train.slurm
scripts/term_fetches/: README_biomedical_terms.md  fetch_cell_types.py  fetch_genes.py  fetch_term_descriptions.py
scripts/test/: benchmark_constructor.slurm  submit_test.sh  test_array.slurm  test_constructor_speed.py
scripts/util/: README_clean_layers_obsm.md  README_cross_dataset_pca.md  clean_layers_obsm.py  compress_zarr.py  convert_all_to_zarr.py  cross_dataset_pca.py  delete_all_models.py  delete_invalid_ds.py  hvg_selection.yaml  pca_config_example.yaml  privatise_all.py  pybiomart_hf_issues.py  run_clean_layers_obsm.slurm  run_cross_dataset_pca.slurm  run_verify_ds.slurm  stable_hvg_selection.py  verify_datasets.py
scripts/workflow/: KILL_WORKFLOW.md  README.md  find_orphaned_processes.sh  kill_workflow.sh  orchestrate_workflow.py  run_workflow_master.py  run_workflow_master.slurm  submit_workflow.py  submit_workflow_local.py  transfer_cpu_to_gpu.slurm  transfer_gpu_to_cpu.slurm
src/adata_hf_datasets/: __init__.py  adata_ref_ds.py  cell_sentences.py  config_utils.py  doi_info.py  download_and_split_data.py  ds_constructor.py  file_utils.py  initial_embedder.py  initial_embedder2.py  initial_embedder_old.py  plotting.py  pp.py  pp_in_chunks.py  ssh_transfer_utils.py  sys_monitor.py  term_descriptions.py  utils.py  workflow_orchestrator.py
src/adata_hf_datasets/dataset/: __init__.py  cell_sentences.py  ds_constructor.py
src/adata_hf_datasets/embed/: __init__.py  initial_embedder.py
src/adata_hf_datasets/pp/: __init__.py  bimodal.py  geneformer.py  general.py  loader.py  orchestrator.py  plotting.py  pybiomart_utils.py  qc.py  sra.py  utils.py
src/adata_hf_datasets/resources/: __init__.py  (+1 more)
tests/: test_add_obs_column_to_h5ad.py  test_anndata_sentence_transformer_dataset.py  test_datasetconstructor.py  test_gene_select_embedder.py  test_geneformer_embedder.py  test_h5ad_disk_modify.py  test_hvg_embedder.py  test_initial_embedder.py  test_new_pca_embedder.py  test_nxctl_integration.py  test_orchestrator.py  test_pp.py  test_preprocessing.py  test_safe_write.py  test_scvi_state_handle.py  test_sra_methods.py  test_upload_download_nct.py  test_uploader.py  test_workflow_errors.py
(+18 files in other folders)
