[build-system]
build-backend = "setuptools.build_meta"

requires = [ "setuptools>=64", "wheel" ]

[project]
name = "adata-hf-datasets"
version = "0.1.0"
description = "A package for building multimodal omics datasets confirm with huggingface based on anndata. Furthermore there is an integration with cellxgene to get an anndata object with extra information based on the given dois."
readme = "README.md"
authors = [
  { name = "Jonatan Menger", email = "jonatan.menger@gmail.com" },
]
requires-python = ">=3.10,<3.14"
classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "anndata",
  "appdirs>=1.4.4",
  "boto3>=1.37.15",
  "botocore>=1.37.15",
  "datasets>=3.2",
  "huggingface-hub>=0.28.1",
  "hydra-core>=1.3.2",
  "ipykernel>=6.29.5",
  "ipywidgets>=8.1.5",
  "jupyter>=1.1.1",
  "mygene>=3.2.2",
  #  "numcodecs==0.14.1",
  "numpy",
  "pandas",
  "pyarrow>=14.0.1,<18; python_version<'3.13'",
  "pyarrow>=18; python_version>='3.13'",
  "pybiomart>=0.2",
  "pynvml>=12",
  "pysradb>=2.2.2",
  "python-dotenv>=1.0.1",
  "requests",
  "scanpy>=1.10.4",
  "scvi-tools>=1.2.2.post2",
  "torch>=2.6",                                 # might need transformers 4.43.4 due to issues with importing AdamW used in Geneformer
  "transformers>=4.43.4",
  "zarr<3",                                     #had some compatibility issues with anndata and numcodecs and used 2.16.1
]

optional-dependencies.dev = [
  "pre-commit",
  "ruff",
  "twine",
]
# Note: The geneformer extra is a marker only.
# To actually install geneformer:
#   1. Initialize submodules: git submodule update --init --recursive
#   2. Install from local path: pip install external/Geneformer
# This extra is intentionally empty to allow pip install without submodules.
optional-dependencies.geneformer = [
  "geneformer",
]

# uv-specific configuration: maps geneformer package to local submodule path
# This is ignored by pip. For pip users, install geneformer manually:
# pip install external/Geneformer (after initializing submodules)
optional-dependencies.test = [
  "coverage",
  "pytest",
]

[tool.setuptools.packages.find]
where = [ "src" ]

[tool.setuptools.package-data]
"adata_hf_datasets.resources" = [ "*.txt", "*.pkl" ]

[tool.uv.sources]
geneformer = { path = "external/Geneformer", extra = "geneformer" }
